# programming_formalisms_optimisation

./: .wordlist.txt  README.md  main.py  pyproject.toml  speeds.csv
.github/workflows/: lint_code.yaml
src/pfoptimisation_richelbilderbeek/: lekberg.py  optimisation_questions.py  optimisation_solutions.py  pythonpool.py
tests/: __init__.py  test_easy_questions.py  test_easy_solutions.py  test_lekberg.py  test_medium_questions.py  test_medium_solutions.py  test_optimisation_questions.py  test_optimisation_solutions.py  test_pythonpool.py
