[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfoptimisation_richelbilderbeek"
version = "0.0.2"
authors = [
  { name="Richèl Bilderbeek", email="richel@richelbilderbeek.nl" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/richelbilderbeek/programming_formalisms_optimisation"
"Bug Tracker" = "https://github.com/richelbilderbeek/programming_formalisms_optimisation/issues"

[tool.ruff]
    lint.select = ["ALL"]
    lint.ignore = ["ANN", "PT", "PTH", "D211", "D213", "S101", "B006"]
    exclude = ["lekberg.py", "pythonpool.py", "test_lekberg.py"]
